--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@cycle/core": "^6.0.0",
     "@cycle/dom": "^9.0.2",
     "@cycle/isolate": "^1.2.0",
+    "fecha": "^1.2.2",
     "rx": "^4.0.7"
   },
   "scripts": {
